# OxideMiner

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  config.toml.example
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: oxide-randomx-ci.yml  release.yml
crates/oxide-core/: Cargo.toml
crates/oxide-core/benches/: randomx.rs
crates/oxide-core/src/: benchmark.rs  config.rs  devfee.rs  lib.rs  randomx_backend.rs  stratum.rs  system.rs  tari.rs  tari_algo.rs  worker.rs
crates/oxide-core/tests/: randomx_supported_profile_smoke.rs
crates/oxide-miner/: Cargo.toml  build.rs
crates/oxide-miner/assets/: app.js  dashboard.css  dashboard.html  dashboard.js  index.html  style.css  theme-manager.css  theme-manager.js  themes.html  themes.js
crates/oxide-miner/src/: args.rs  dashboard.html  http.rs  http_api.rs  logging.rs  main.rs  miner.rs  solo.rs  stats.rs  themes.rs  util.rs
crates/oxide-miner/src/solo/: zmq.rs
crates/oxide-miner/static/: app.js  index.html  style.css
crates/oxide-randomx/: Cargo.toml  README.md  build.rs
crates/oxide-randomx/docs/: full-features-benchmark-v9-workflow.md  full-features-benchmark-workflow.md  jit-plan.md  jit.md  oxideminer-integration-harness.md  oxideminer-integration-profile.md  oxideminer-supported-build-contract.json  oxideminer-supported-build-contract.md  perf-results-amd.md  perf-results-intel.md  perf.md  perf_results_visualizer_guide.md  prefetch-calibration-prototype-v7-08.md  public-beta-capture.md  public-beta-repo-boundary.md  public-capture.md  superscalar-prototype-v7-07.md  superscalar-research-program.md
crates/oxide-randomx/docs/randomx-refs/: README.md  specs.md
crates/oxide-randomx/examples/: bench.rs  build_bench.rs  oxideminer_integration.rs  perf_harness.rs  prefetch_apply.rs  prefetch_calibrate.rs  rxsum.rs  superscalar_hash_harness.rs
crates/oxide-randomx/perf_baselines/ci/: README.md  fast_jit_fastregs.csv  light_interp.csv  light_jit.csv  light_jit_conservative.csv  manifest.txt
crates/oxide-randomx/perf_results/: P2_4_integrated_full_features_authority_2026-03-30.md  README.md  full_features_authority_index_v10.json
crates/oxide-randomx/perf_results/AMD/: P2_amd_fam23_mod113_host_unavailability_2026-03-30.md
crates/oxide-randomx/perf_results/AMD/ff_amd_fam23_mod113_windows_20260318_210634/meta/: matrix_index.csv  provenance.txt
crates/oxide-randomx/perf_results/AMD/ff_amd_fam23_mod113_windows_20260320_211512/meta/: matrix_index.csv  pair_summary.csv  provenance.txt
crates/oxide-randomx/perf_results/AMD/ff_amd_fam23_mod8_linux_20260326_v10/meta/: matrix_index.csv  pair_summary.csv  provenance.txt
crates/oxide-randomx/perf_results/AMD/ff_amd_fam23_mod8_windows_20260326_v10/meta/: pair_summary.csv  provenance.txt
crates/oxide-randomx/perf_results/Intel/ff_intel_fam6_mod45_linux_20260326_v10/meta/: pair_summary.csv  provenance.txt
crates/oxide-randomx/perf_results/Intel/ff_intel_fam6_mod58_linux_20260326_v10/meta/: matrix_index.csv  pair_summary.csv  provenance.txt
crates/oxide-randomx/scripts/: Enable-1GB-HugePages.sh  Enable-LargePages.ps1  README.md  bench_apples.ps1  bench_apples.sh  perf_suite.ps1  perf_suite.sh
crates/oxide-randomx/scripts/capture/: run_v6_07_jit_fastregs_clean_intel.sh  run_v6_08_jit_fastregs_clean_amd.ps1  run_v6_10_simd_blockio_intel.sh  run_v6_11_simd_blockio_amd.ps1  run_v7_09_simd_blockio_intel.sh  run_v8_01_amd_windows_capture.ps1  run_v8_05_amd_windows_capture.ps1  run_v8_06_intel_ubuntu_capture.sh
crates/oxide-randomx/scripts/ci/: run_ci_perf_gate.sh
crates/oxide-randomx/src/: aes.rs  argon2d.rs  blake.rs  cache.rs  config.rs  conformance.rs  constants.rs  dataset.rs  errors.rs  flags.rs  full_features_capture.rs  generators.rs  lib.rs  oxideminer_integration.rs  oxideminer_supported_build_contract.rs  perf.rs  prefetch_calibration.rs  superscalar_tools.rs  threading.rs  util.rs
crates/oxide-randomx/src/superscalar/: mod.rs
crates/oxide-randomx/src/vm/: mod.rs
crates/oxide-randomx/src/vm/jit/: executable.rs  helpers.rs  mod.rs  x86_64.rs
crates/oxide-randomx/tests/: full_dataset.rs  jit_execbuf.rs  jit_perf_smoke.rs  oracle.rs  oxideminer_integration.rs  oxideminer_supported_build_contract.rs  perf_smoke.rs  shared_fast_parent_api.rs
crates/oxide-randomx/tests/common/: mod.rs
crates/oxide-randomx/tests/data/: conformance_cases.json  oracle_expected.json
crates/oxide-randomx/tools/: full_features_authority.rs  full_features_benchmark.rs  gen_conformance_cases.rs  gen_oxideminer_supported_build_contract.rs  oxide_randomx_beta_capture.rs  oxide_randomx_public_capture.rs  perf_compare.rs  v7_10_amd_windows_capture.rs  v8_01_amd_capture.rs
crates/oxide-randomx/tools/perf_viz/: Cargo.toml  README.md
crates/oxide-randomx/tools/perf_viz/src/: app.rs  ingest.rs  main.rs  model.rs  schema.rs  web.rs
crates/oxide-randomx/tools/perf_viz/web/: app.js  explanations.html  explanations.js  index.html  styles.css
crates/randomx-sys/: Cargo.toml  build.rs
crates/randomx-sys/src/: lib.rs
docs/: DESIGN.md  oxide-randomx-supported-profile-validation.md  themes.md
plugins/themes/aurora/: README.md  theme.css  theme.html  theme.js  theme.json
plugins/themes/retro/: README.md  theme.css  theme.html  theme.json
plugins/themes/web3/: README.md  theme.css  theme.html  theme.json
scripts/: README.md  generate_sha256.sh
scripts/linux/: enable_hugepages.sh
scripts/release/: generate-checksums.sh  list_changes_linux.sh  list_changes_windows.ps1
scripts/windows/: Disable-LargePages.ps1  Enable-LargePages.ps1
