[workspace]
members = ["crates/oxide-core", "crates/oxide-miner"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["raystanza"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
num_cpus = "1"
hex = "0.4"
once_cell = "1.19"

[patch.crates-io]
randomx-bindings-sys = { git = "https://github.com/McFranko/randomx-bindings-sys", rev = "482ea799b3e6e9a9a8b0df9aa1a8c28e2feeea9b" }
