# OxideMiner/Cargo.toml

[workspace]
members = ["crates/oxide-core", "crates/oxide-miner"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["raystanza"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
num_cpus = "1"
hex = "0.4"
once_cell = "1.19"
hyper = { version = "1", features = ["full"] }
tokio-rustls = "0.24"
webpki-roots = "0.25"
core_affinity = "0.5"
hyper-util = { version = "0.1", features = ["server", "tokio"] }
http-body-util = "0.1"
sysinfo = "0.30"
raw-cpuid = "11"
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
] }

[profile.release]
lto = true
