# OxideMiner/Cargo.toml

[workspace]
members = ["crates/oxide-core", "crates/oxide-miner"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "BSL-1.1"
authors = ["raystanza"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
num_cpus = "1"
hex = "0.4"
once_cell = "1.19"
hyper = { version = "1", features = ["full"] }
tokio-rustls = "0.24"
webpki-roots = "0.25"
tokio-socks = "0.5"
url = "2"
core_affinity = "0.5"
hyper-util = { version = "0.1", features = ["server", "tokio"] }
http-body-util = "0.1"
sysinfo = "0.30"
raw-cpuid = "11"
windows-sys = { version = "0.61.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Console",
] }
rustls-pemfile = "1"
ring = "0.17"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls_webpki = { package = "rustls-webpki", version = "0.101" }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[profile.maxperf]
inherits = "release"
# Extra-aggressive build tuned for the host CPU. Users can opt-in via `cargo build --profile maxperf`.
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "debuginfo"
