# OxideMiner/crates/oxide-core/Cargo.toml

[package]
name = "oxide-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
randomx = ["dep:randomx-rs"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
randomx-rs = { version = "1.4", optional = true }
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }
core_affinity = { workspace = true }
sysinfo = { workspace = true }
raw-cpuid = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
] }
