# OxideMiner/crates/oxide-core/Cargo.toml

[package]
name = "oxide-core"
version = "0.3.2"
edition = "2021"

[features]
default = []
randomx = ["dep:randomx-rs"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
monero = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
randomx-rs = { version = "1.4", optional = true }
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }
core_affinity = { workspace = true }
sysinfo = { workspace = true }
raw-cpuid = { workspace = true }
rustls-pemfile = { workspace = true }
ring = { workspace = true }
rustls = { workspace = true }
rustls_webpki = { workspace = true }
clap = { workspace = true }
tokio-socks = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
unsigned-varint = { workspace = true }
uint = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
] }

[dev-dependencies]
toml = { workspace = true }
