# OxideMiner/crates/oxide-miner/Cargo.toml

[package]
name = "oxide-miner"
version = "0.1.0"
edition = "2021"

[dependencies]
oxide-core = { path = "../oxide-core", features = ["randomx"] }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
num_cpus = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { version = "0.7", features = ["json"] }
tokio-stream = { version = "0.1" }
tracing-appender = "0.2"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }