# OxideMiner/crates/oxide-miner/Cargo.toml

[package]
name = "oxide-miner"
version = "0.1.0"
edition = "2021"

[dependencies]
oxide-core = { path = "../oxide-core", features = ["randomx"] }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
num_cpus = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
tracing-appender = "0.2"
sysinfo = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
ring = { workspace = true }
serde = { workspace = true }
toml = "0.8"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tempfile = "3"

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
