[package]
name = "perf_viz"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
encoding_rs = "0.8"
rayon = "1.10"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
walkdir = "2.5"
webbrowser = "1.0"
